# phantomkit

./: .coveragerc  .dockerignore  .flake8  .pre-commit-config.yaml  LICENSE  README.md  api.html  cli.html  codecov.yml  genindex.html  index.html  objects.inv  phantom_pipe_12_corect_topup_bval_filter.sh  pyproject.toml  quick_start.html  search.html  searchindex.js
.github/workflows/: ci-cd.yml
_sources/: cli.rst.txt
docker/: Dockerfile  README.md  imp_polyfill.py
docs/source/: api.rst  cli.rst  conf.py  index.rst  quick_start.rst
gsp_metrics/tests/: test_gradient_analysis.py
phantom_qa_metrics/: cli.py  metrics.py  plot_maps_TE.py  plot_maps_ir.py  plot_vial_intensity.py  pydra_phantom_iterative.py  registration.py  workflow.py
phantom_qa_metrics/plotting/: maps_ir.py  visualization.py
phantomkit/: cli.py  dwi_processing.py  flowchart.md  gradient_analysis.py  metrics.py  phantom_processor.py  pipeline.py  registration.py  workflow.py
phantomkit/analyses/: diffusion_metrics.py  vial_signal.py
phantomkit/analyses/tests/: test_diffusion_metrics.py  test_vial_signal.py
phantomkit/plotting/: PLOTTING_OVERVIEW.md  __init__.py  _html_common.py  calibration_plotter.py  compare_plots.py  maps_ir.py  maps_te.py  niivue.umd.min.js  vial_intensity.py  viewer.py  visualization.py
phantomkit/plotting/tests/: test_plotting.py
phantomkit/protocols/: gsp_spirit.py
phantomkit/protocols/tests/: test_gsp_spirit.py
phantomkit/tests/: test_cli.py  test_metrics.py  test_registration.py  test_workflow.py
template_data/: DIFFUSION-O-3574_Calibration_GSP_PVP_20220331.xlsx  phantom_config.json
template_data/120E/: adc_reference.json  t1t2_reference.json
template_data/SPIRIT/: GSP_ADCvalues.xlsx  adc_reference.json  t1t2_reference.json
