[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "phantomkit"
description = "Collection of tools to derive metrics from physical phantoms used in QA of medical imaging instruments."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "click >=8.0",
    "fileformats",
    "fileformats-medimage",
    "fileformats-medimage-extras",
    "matplotlib >=3.7.0",
    "numpy >=1.24.0",
    "pandas >=2.0.0",
    "pydra >=1.0a7",
    "pydra-tasks-ants",
    "pydra-tasks-fsl",
    "pydra-tasks-mrtrix3",
    "scipy >=1.10.0",
    "typing_extensions >=4.6.3; python_version < '4.0'",
]

authors = [
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" },
    { name = "Hugh McCloskey", email = "Hugh.Mccloskey@sahmri.com" },
    { name = "Arkiev D'Souza", email = "arkiev.dsouza@sydney.edu.au" }
]
maintainers = [
    { name = "Thomas G. Close", email = "tom.g.close@gmail.com" },
    { name = "Hugh McCloskey", email = "Hugh.Mccloskey@sahmri.com" },
    { name = "Arkiev D'Souza", email = "arkiev.dsouza@sydney.edu.au" }
]
keywords = [
    "MRI",
    "phantom",
    "analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "codespell",
    "flake8",
    "flake8-pyproject",
    "fileformats[test]",
    "mypy >=1.5.1",
]
test = [
    "mypy >=1.5.1",
    "pytest >=6.2.5",
    "pytest-env>=0.6.2",
    "pytest-cov>=2.12.1",
]
docs = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]

[project.scripts]
phantomkit = "phantomkit.cli:main"

[project.urls]
repository = "https://github.com/Australian-Imaging-Service/phantomkit"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "phantomkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["phantomkit"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["phantomkit"]
exclude = ["tests"]
include = ["./phantomkit"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "tests",
    "scripts",
    "docs",
    "build",
    "dist",
    "phi_finder/_version.py",
]

[tool.codespell]
ignore-words = ".codespell-ignorewords"

[tool.flake8]
doctests = true
per-file-ignores = ["__init__.py:F401"]
max-line-length = 88
select = "C,E,F,W,B,B950"
extend-ignore = ['E203', 'E501', 'E129', 'W503']
